# game

./: .gitignore  CMakeLists.txt  GeneralTests.cpp  PPTests.cpp  creature.cpp  creature.h  field.cpp  field.h  map.cpp  map.h
Other/: Thumbs.db
SoulRift/: Constants.h  GLButton.cpp  GLButton.h  GLFrame.cpp  GLFrame.h  GLObject.cpp  GLObject.h  GLWindow.cpp  GLWindow.h  GameWindow.cpp  creature.cpp  creature.h  field.h  main_console.cpp  map.h  map_defines.h
SoulRift/engine/: GLButton.cpp  GLFrame.cpp  GLObject.cpp  GLObject.h  GLWindow.cpp  GameWindow.cpp  SettingsManager.cpp  Utility.cpp  Utility.h
code/: BattlePhaseControl.cpp  BattlePhaseControl.h  Creature.cpp  Creature.h  CreatureDefines.h  Enemy.cpp  EventControl.cpp  EventControl.h  EventFlags.cpp  EventFlags.h  Field.cpp  Field.h  Map.cpp  Map.h  Perks.cpp  Perks.h  Player.cpp  Player.h  Skills.cpp  Stats.cpp  Stats.h  battlePhaseControl.h  creature.cpp  creature.h  enemy.cpp  enemy.h  eventControl.cpp  eventControl.h  eventFlags.cpp  eventFlags.h  globalPhaseControl.cpp  globalPhaseControl.h  main.cpp  map.cpp  map.h  map_defines.h  perks.cpp  perks.h  player.cpp  player.h  (+3 more)
common/: shader.cpp
engine/: Constants.h  GLButton.cpp  GLButton.h  GLField.cpp  GLField.h  GLFrame.cpp  GLFrame.h  GLObject.cpp  GLObject.h  GLPanel.cpp  GLPanel.h  GLText.cpp  GLText.h  GLWindow.cpp  GLWindow.h  GameWindow.cpp  GameWindow.h  IGLObject.h  ResourceFactory.cpp  ResourceFactory.h  ResourseFactory.cpp  ResourseFactory.h  SettingsManager.cpp  SettingsManager.h  Shader.cpp  Shader.h  main.cpp
resources/: parametres.config
tests/: CMakeLists.txt  main.cpp  qtRiftTest.pro
tests/googlemock/include/gmock/: gmock-cardinalities.h
tests/googlemock/src/: gmock-cardinalities.cc
tests/googletest/include/gtest/: gtest-printers.h  gtest.h
tests/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util.h  gtest-port.h
uml/: Pair programming.txt  Thumbs.db  tests.txt  Тех. долг.txt  архитектура.txt  парное программирование отчет  парное программирование.txt
user experience/: UX.odt
